--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -207,6 +207,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# time of day for faults could be interesting, split event column to date and timestamp columns\n",
+    "faults['event_date'] = faults['EventTimeStamp'].dt.date\n",
+    "faults['event_time'] = faults['EventTimeStamp'].dt.time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RecordID</th>\n",
+       "      <th>ESS_Id</th>\n",
+       "      <th>EventTimeStamp</th>\n",
+       "      <th>eventDescription</th>\n",
+       "      <th>ecuModel</th>\n",
+       "      <th>ecuMake</th>\n",
+       "      <th>spn</th>\n",
+       "      <th>fmi</th>\n",
+       "      <th>active</th>\n",
+       "      <th>activeTransitionCount</th>\n",
+       "      <th>EquipmentID</th>\n",
+       "      <th>event_date</th>\n",
+       "      <th>event_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>990349</td>\n",
+       "      <td>2015-02-21 10:47:13</td>\n",
+       "      <td>Low (Severity Low) Engine Coolant Level</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>111</td>\n",
+       "      <td>17</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1439</td>\n",
+       "      <td>2015-02-21</td>\n",
+       "      <td>10:47:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>990360</td>\n",
+       "      <td>2015-02-21 11:34:34</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>629</td>\n",
+       "      <td>12</td>\n",
+       "      <td>True</td>\n",
+       "      <td>127</td>\n",
+       "      <td>1439</td>\n",
+       "      <td>2015-02-21</td>\n",
+       "      <td>11:34:34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>990364</td>\n",
+       "      <td>2015-02-21 11:35:31</td>\n",
+       "      <td>Incorrect Data Steering Wheel Angle</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>1807</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>127</td>\n",
+       "      <td>1369</td>\n",
+       "      <td>2015-02-21</td>\n",
+       "      <td>11:35:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>990370</td>\n",
+       "      <td>2015-02-21 11:35:33</td>\n",
+       "      <td>Incorrect Data Steering Wheel Angle</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>1807</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>127</td>\n",
+       "      <td>1369</td>\n",
+       "      <td>2015-02-21</td>\n",
+       "      <td>11:35:33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>990416</td>\n",
+       "      <td>2015-02-21 11:39:41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0USA13_13_0415_2238A</td>\n",
+       "      <td>VOLVO</td>\n",
+       "      <td>4364</td>\n",
+       "      <td>17</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>2015-02-21</td>\n",
+       "      <td>11:39:41</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  RecordID  ESS_Id      EventTimeStamp  \\\n",
+       "0        1  990349 2015-02-21 10:47:13   \n",
+       "1        2  990360 2015-02-21 11:34:34   \n",
+       "2        3  990364 2015-02-21 11:35:31   \n",
+       "3        4  990370 2015-02-21 11:35:33   \n",
+       "4        5  990416 2015-02-21 11:39:41   \n",
+       "\n",
+       "                          eventDescription              ecuModel  ecuMake  \\\n",
+       "0  Low (Severity Low) Engine Coolant Level               unknown  unknown   \n",
+       "1                                      NaN               unknown  unknown   \n",
+       "2      Incorrect Data Steering Wheel Angle               unknown  unknown   \n",
+       "3      Incorrect Data Steering Wheel Angle               unknown  unknown   \n",
+       "4                                      NaN  0USA13_13_0415_2238A    VOLVO   \n",
+       "\n",
+       "    spn fmi active  activeTransitionCount EquipmentID  event_date event_time  \n",
+       "0   111  17   True                      2        1439  2015-02-21   10:47:13  \n",
+       "1   629  12   True                    127        1439  2015-02-21   11:34:34  \n",
+       "2  1807   2  False                    127        1369  2015-02-21   11:35:31  \n",
+       "3  1807   2   True                    127        1369  2015-02-21   11:35:33  \n",
+       "4  4364  17  False                      2        1674  2015-02-21   11:39:41  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "faults.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
