--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -409,318 +409,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RecordID</th>\n",
-       "      <th>ESS_Id</th>\n",
-       "      <th>EventTimeStamp</th>\n",
-       "      <th>eventDescription</th>\n",
-       "      <th>ecuModel</th>\n",
-       "      <th>ecuMake</th>\n",
-       "      <th>spn</th>\n",
-       "      <th>fmi</th>\n",
-       "      <th>active</th>\n",
-       "      <th>activeTransitionCount</th>\n",
-       "      <th>EquipmentID</th>\n",
-       "      <th>Latitude</th>\n",
-       "      <th>Longitude</th>\n",
-       "      <th>event_date</th>\n",
-       "      <th>event_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>18</td>\n",
-       "      <td>990541</td>\n",
-       "      <td>2015-02-21 11:47:13</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>5444</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>126</td>\n",
-       "      <td>302</td>\n",
-       "      <td>36.066712</td>\n",
-       "      <td>-86.433842</td>\n",
-       "      <td>2015-02-21</td>\n",
-       "      <td>11:47:13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>19</td>\n",
-       "      <td>990542</td>\n",
-       "      <td>2015-02-21 11:47:13</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>5396</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>126</td>\n",
-       "      <td>302</td>\n",
-       "      <td>36.066712</td>\n",
-       "      <td>-86.433842</td>\n",
-       "      <td>2015-02-21</td>\n",
-       "      <td>11:47:13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>22</td>\n",
-       "      <td>990567</td>\n",
-       "      <td>2015-02-21 11:47:15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>5396</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>126</td>\n",
-       "      <td>302</td>\n",
-       "      <td>36.066573999999996</td>\n",
-       "      <td>-86.432962</td>\n",
-       "      <td>2015-02-21</td>\n",
-       "      <td>11:47:15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>23</td>\n",
-       "      <td>990568</td>\n",
-       "      <td>2015-02-21 11:47:15</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>5444</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>126</td>\n",
-       "      <td>302</td>\n",
-       "      <td>36.066573999999996</td>\n",
-       "      <td>-86.432962</td>\n",
-       "      <td>2015-02-21</td>\n",
-       "      <td>11:47:15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>25</td>\n",
-       "      <td>990611</td>\n",
-       "      <td>2015-02-21 11:50:50</td>\n",
-       "      <td>Low (Severity Low) Engine Coolant Level</td>\n",
-       "      <td>6X1u10D1500000000</td>\n",
-       "      <td>CMMNS</td>\n",
-       "      <td>111</td>\n",
-       "      <td>17</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1590</td>\n",
-       "      <td>35.587731</td>\n",
-       "      <td>-86.444351</td>\n",
-       "      <td>2015-02-21</td>\n",
-       "      <td>11:50:50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187290</th>\n",
-       "      <td>1248414</td>\n",
-       "      <td>123881027</td>\n",
-       "      <td>2020-03-06 11:48:52</td>\n",
-       "      <td>Low Voltage (Aftertreatment 1 Intake NOx)</td>\n",
-       "      <td>6X1u13D1500000000</td>\n",
-       "      <td>CMMNS</td>\n",
-       "      <td>3216</td>\n",
-       "      <td>4</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>36.195091999999995</td>\n",
-       "      <td>-83.174814</td>\n",
-       "      <td>2020-03-06</td>\n",
-       "      <td>11:48:52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187291</th>\n",
-       "      <td>1248415</td>\n",
-       "      <td>123881028</td>\n",
-       "      <td>2020-03-06 11:48:52</td>\n",
-       "      <td>Abnormal Rate of Change Aftertreatment 1 Intak...</td>\n",
-       "      <td>6X1u13D1500000000</td>\n",
-       "      <td>CMMNS</td>\n",
-       "      <td>3216</td>\n",
-       "      <td>10</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>36.195091999999995</td>\n",
-       "      <td>-83.174814</td>\n",
-       "      <td>2020-03-06</td>\n",
-       "      <td>11:48:52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187292</th>\n",
-       "      <td>1248416</td>\n",
-       "      <td>123881029</td>\n",
-       "      <td>2020-03-06 11:48:52</td>\n",
-       "      <td>Data Drifted High Aftertreatment 1 Intake NOx</td>\n",
-       "      <td>6X1u13D1500000000</td>\n",
-       "      <td>CMMNS</td>\n",
-       "      <td>3216</td>\n",
-       "      <td>20</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>36.195091999999995</td>\n",
-       "      <td>-83.174814</td>\n",
-       "      <td>2020-03-06</td>\n",
-       "      <td>11:48:52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187293</th>\n",
-       "      <td>1248417</td>\n",
-       "      <td>123881030</td>\n",
-       "      <td>2020-03-06 11:48:52</td>\n",
-       "      <td>High Voltage (Engine Oil Temperature 1)</td>\n",
-       "      <td>6X1u13D1500000000</td>\n",
-       "      <td>CMMNS</td>\n",
-       "      <td>175</td>\n",
-       "      <td>3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>36.195091999999995</td>\n",
-       "      <td>-83.174814</td>\n",
-       "      <td>2020-03-06</td>\n",
-       "      <td>11:48:52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1187325</th>\n",
-       "      <td>1248449</td>\n",
-       "      <td>123899756</td>\n",
-       "      <td>2020-03-06 13:30:40</td>\n",
-       "      <td>Incorrect Data J1939 Network #1 Primary Vehicl...</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>unknown</td>\n",
-       "      <td>639</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>127</td>\n",
-       "      <td>2255</td>\n",
-       "      <td>36.195</td>\n",
-       "      <td>-83.175</td>\n",
-       "      <td>2020-03-06</td>\n",
-       "      <td>13:30:40</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>128155 rows × 15 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        RecordID     ESS_Id      EventTimeStamp  \\\n",
-       "17            18     990541 2015-02-21 11:47:13   \n",
-       "18            19     990542 2015-02-21 11:47:13   \n",
-       "21            22     990567 2015-02-21 11:47:15   \n",
-       "22            23     990568 2015-02-21 11:47:15   \n",
-       "24            25     990611 2015-02-21 11:50:50   \n",
-       "...          ...        ...                 ...   \n",
-       "1187290  1248414  123881027 2020-03-06 11:48:52   \n",
-       "1187291  1248415  123881028 2020-03-06 11:48:52   \n",
-       "1187292  1248416  123881029 2020-03-06 11:48:52   \n",
-       "1187293  1248417  123881030 2020-03-06 11:48:52   \n",
-       "1187325  1248449  123899756 2020-03-06 13:30:40   \n",
-       "\n",
-       "                                          eventDescription           ecuModel  \\\n",
-       "17                                                     NaN            unknown   \n",
-       "18                                                     NaN            unknown   \n",
-       "21                                                     NaN            unknown   \n",
-       "22                                                     NaN            unknown   \n",
-       "24                 Low (Severity Low) Engine Coolant Level  6X1u10D1500000000   \n",
-       "...                                                    ...                ...   \n",
-       "1187290          Low Voltage (Aftertreatment 1 Intake NOx)  6X1u13D1500000000   \n",
-       "1187291  Abnormal Rate of Change Aftertreatment 1 Intak...  6X1u13D1500000000   \n",
-       "1187292      Data Drifted High Aftertreatment 1 Intake NOx  6X1u13D1500000000   \n",
-       "1187293            High Voltage (Engine Oil Temperature 1)  6X1u13D1500000000   \n",
-       "1187325  Incorrect Data J1939 Network #1 Primary Vehicl...            unknown   \n",
-       "\n",
-       "         ecuMake   spn fmi active  activeTransitionCount EquipmentID  \\\n",
-       "17       unknown  5444   1  False                    126         302   \n",
-       "18       unknown  5396   1  False                    126         302   \n",
-       "21       unknown  5396   1   True                    126         302   \n",
-       "22       unknown  5444   1   True                    126         302   \n",
-       "24         CMMNS   111  17   True                      1        1590   \n",
-       "...          ...   ...  ..    ...                    ...         ...   \n",
-       "1187290    CMMNS  3216   4  False                      1        1970   \n",
-       "1187291    CMMNS  3216  10  False                      1        1970   \n",
-       "1187292    CMMNS  3216  20  False                      1        1970   \n",
-       "1187293    CMMNS   175   3  False                      1        1970   \n",
-       "1187325  unknown   639   2   True                    127        2255   \n",
-       "\n",
-       "                   Latitude   Longitude  event_date event_time  \n",
-       "17                36.066712  -86.433842  2015-02-21   11:47:13  \n",
-       "18                36.066712  -86.433842  2015-02-21   11:47:13  \n",
-       "21       36.066573999999996  -86.432962  2015-02-21   11:47:15  \n",
-       "22       36.066573999999996  -86.432962  2015-02-21   11:47:15  \n",
-       "24                35.587731  -86.444351  2015-02-21   11:50:50  \n",
-       "...                     ...         ...         ...        ...  \n",
-       "1187290  36.195091999999995  -83.174814  2020-03-06   11:48:52  \n",
-       "1187291  36.195091999999995  -83.174814  2020-03-06   11:48:52  \n",
-       "1187292  36.195091999999995  -83.174814  2020-03-06   11:48:52  \n",
-       "1187293  36.195091999999995  -83.174814  2020-03-06   11:48:52  \n",
-       "1187325              36.195     -83.175  2020-03-06   13:30:40  \n",
-       "\n",
-       "[128155 rows x 15 columns]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# mask for each service station, lat and long to 2 decimal places\n",
-    "station_1 = (faults['Latitude'].str.contains('36.06')) & faults['Longitude'].str.contains('86.43')\n",
-    "station_2 = (faults['Latitude'].str.contains('35.58')) & faults['Longitude'].str.contains('86.44')\n",
-    "station_3 = (faults['Latitude'].str.contains('36.19')) & faults['Longitude'].str.contains('83.17')\n",
-    "faults[station_1 | station_2 | station_3]"
+    "station_1 = (faults['Latitude'].str.contains('36.06')) & (faults['Longitude'].str.contains('86.43'))\n",
+    "station_2 = (faults['Latitude'].str.contains('35.58')) & (faults['Longitude'].str.contains('86.44'))\n",
+    "station_3 = (faults['Latitude'].str.contains('36.19')) & (faults['Longitude'].str.contains('83.17'))\n",
+    "\n",
+    "# dataframe without faults associated with service locations\n",
+    "faults_nonservice = faults[~(station_1 | station_2 | station_3)]"
    ]
   },
   {
