column added to detect faults that occurred same day as derate

--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -708,6 +709,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lamp duration column (how much time was the light on for a fault)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
@@ -975,24 +985,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NaN    938\n",
-       "Name: eventDescription, dtype: int64"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# faults_nonservice['eventDescription'].value_counts(dropna = False)\n",
-    "faults_nonservice.loc[faults_nonservice['spn'] == '5246']['eventDescription'].value_counts(dropna = False)"
+    "# drop active == False (Kagon is keeping these rows so it will give us a good way to compare performance)\n",
+    "faults_active = faults_nonservice.loc[faults_nonservice['active'] == 'True']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for each equipment id that experienced a derate, durration of time before derate for each fault\n",
+    "# complicated by equipment that has more than one derate event\n",
+    "# derates can occur at any time of day (tend to be clustered during working hours bet that's probably because there are more trucks active) so don't want to just group by day\n",
+    "# just to get something working, go on date for now\n",
+    "faults_active = faults_active.copy()\n",
+    "faults_active['derate_true'] = np.where(faults_active.groupby(['EquipmentID', 'event_date'])['spn'].transform(lambda x: (x == '5246').any()), 'True', 'False')\n",
+    "# once we get how to calculate time of event before derate this code can be modified slightly to detect"
    ]
   },
   {
