--- a/notebooks/02_teresa_models.ipynb
+++ b/notebooks/02_teresa_models.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -73,17 +73,18 @@
     "X = fault_diag[variables]\n",
     "y = fault_diag['derate_full']\n",
     "\n",
-    "# Impute missing values with the mean of each column\n",
-    "imputer = SimpleImputer(strategy='mean')\n",
-    "X_imputed = imputer.fit_transform(X)\n",
-    "\n",
     "# split data into train/test before scaling and imputation\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_imputed, y, random_state = 42, stratify = y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = 42, stratify = y)\n",
     "\n",
-    "logreg = LogisticRegression(max_iter = 1000).fit(X_train, y_train)\n",
+    "# Impute missing values with the mean of each column\n",
+    "imputer = SimpleImputer(strategy = 'mean')\n",
+    "X_train_imputed = imputer.fit_transform(X_train)\n",
+    "X_test_imputed = imputer.transform(X_test)\n",
     "\n",
-    "print(accuracy_score(y_test, logreg.predict(X_test)))\n",
-    "print(classification_report(y_test, logreg.predict(X_test), zero_division = 0.0))"
+    "logreg = LogisticRegression(max_iter = 1000).fit(X_train_imputed, y_train)\n",
+    "\n",
+    "print(accuracy_score(y_test, logreg.predict(X_test_imputed)))\n",
+    "print(classification_report(y_test, logreg.predict(X_test_imputed), zero_division = 0.0))"
    ]
   },
   {
