--- a/notebooks/rob_faults_eda.ipynb
+++ b/notebooks/rob_faults_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "25dbe070-d10b-4296-b226-8f20b6363f07",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d2ad5f6d-425e-48a3-9164-e841a264c3b8",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "4                     2        1674  38.416481  -89.442638  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "abf76df5-b4c1-48ef-a710-06a7aeaae5eb",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "4    VOLVO         0  4364  17  False                     2        1674  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,166 +382,43 @@
    "id": "73468183-3692-44fa-9eb7-60e3143c1121",
    "metadata": {},
    "source": [
-    "ecu source codes: 0, 11, 49, 3, 61"
+    "ecu source codes: 0, 11, 49, 3, 61\n",
+    "Most important for engine, exhuast and therefor relevant to derates: 0, 49, 61"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "6657364c-61d0-446e-a81a-34201c69c249",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([nan, 'Incorrect Data Steering Wheel Angle',\n",
-       "       'Incorrect Data Brake Signal Sensor 1',\n",
-       "       'Incorrect Data Brake Signal Sensor 2',\n",
-       "       'Special Instructions System Diagnostic Code #1',\n",
-       "       'Special Instructions Wheel Sensor ABS Axle 2 Left',\n",
-       "       'Incorrect Data Wheel Sensor ABS Axle 3 Left',\n",
-       "       'Incorrect Data Wheel Sensor ABS Axle 2 Left',\n",
-       "       'Low Voltage (Power Supply (obsolete))',\n",
-       "       'Special Instructions Wheel Sensor ABS Axle 1 Right',\n",
-       "       'Special Instructions Wheel Sensor ABS Axle 1 Left',\n",
-       "       'Incorrect Data J1939 Network #1 Primary Vehicle Network ( previously SAE J1939 Data Link)',\n",
-       "       'Incorrect Data Wheel Sensor ABS Axle 1 Right',\n",
-       "       'Incorrect Data Wheel Sensor ABS Axle 1 Left',\n",
-       "       'Special Instructions System Diagnostic Code #4',\n",
-       "       'Abnormal Update Rate Steering Wheel Angle',\n",
-       "       'Incorrect Data Wheel Sensor ABS Axle 2 Right',\n",
-       "       'Out of Calibration Pressure Modulation Valve ABS Axle 3 Right',\n",
-       "       'Low (Severity High) Wheel Sensor ABS Axle 2 Left',\n",
-       "       'High Current Pressure Modulation Valve ABS Axle 2 Left',\n",
-       "       'Not Reporting Data Brake Light Switch 1',\n",
-       "       'Special Instructions Speed Signal Input',\n",
-       "       'Low Voltage (Relay Diagonal 1)',\n",
-       "       'High Current Retarder Control Relay',\n",
-       "       'Low (Severity High) Wheel Sensor ABS Axle 2 Right',\n",
-       "       'Abnormal Frequency Dif 2 - ASR Valve',\n",
-       "       'Incorrect Data Axle Load Sensor',\n",
-       "       'Special Instructions Wheel Sensor ABS Axle 2 Right',\n",
-       "       'Abnormal Rate of Change Wheel Sensor ABS Axle 2 Left',\n",
-       "       'Special Instructions J1939 Network #1 Primary Vehicle Network ( previously SAE J1939 Data Link)',\n",
-       "       'Incorrect Data Warning Light Bulb',\n",
-       "       'Not Reporting Data Wheel Sensor ABS Axle 2 Left',\n",
-       "       'Low Voltage (Relay Diagonal 2)',\n",
-       "       'Abnormal Frequency Wheel Sensor ABS Axle 1 Right',\n",
-       "       'Incorrect Data Yaw Rate', 'Special Instructions Yaw Rate',\n",
-       "       'Low Current J1939 Network #1 Primary Vehicle Network ( previously SAE J1939 Data Link)',\n",
-       "       'Abnormal Frequency Controller #1',\n",
-       "       'Abnormal Update Rate J1939 Network #1 Primary Vehicle Network ( previously SAE J1939 Data Link)',\n",
-       "       'Special Instructions Wheel Sensor ABS Axle 3 Right',\n",
-       "       'Incorrect Data Brake Light Switch 1',\n",
-       "       'Abnormal Frequency Wheel Sensor ABS Axle 2 Left',\n",
-       "       'Low Voltage (Wheel Sensor ABS Axle 1 Right)',\n",
-       "       'Not Reporting Data Brake Signal Sensor 1',\n",
-       "       'Not Reporting Data Wheel Sensor ABS Axle 1 Right',\n",
-       "       'Special Instructions Controller #1',\n",
-       "       'Low (Severity High) Wheel Sensor ABS Axle 1 Right',\n",
-       "       'Low (Severity High) Wheel Sensor ABS Axle 1 Left',\n",
-       "       'Low Current Pressure Modulation Valve ABS Axle 1 Left',\n",
-       "       'Incorrect Data Calibration Memory',\n",
-       "       'Abnormal Update Rate Dif 2 - ASR Valve',\n",
-       "       'High Voltage (Power Supply (obsolete))',\n",
-       "       'Abnormal Frequency Wheel Sensor ABS Axle 2 Right',\n",
-       "       'Abnormal Update Rate Yaw Rate',\n",
-       "       'Abnormal Rate of Change Wheel Sensor ABS Axle 1 Right',\n",
-       "       'Low Current Wheel Sensor ABS Axle 2 Right',\n",
-       "       'High Voltage (Relay Diagonal 1)',\n",
-       "       'Abnormal Rate of Change Wheel Sensor ABS Axle 2 Right',\n",
-       "       'Special Instructions Wheel Sensor ABS Axle 3 Left',\n",
-       "       'Abnormal Rate of Change Wheel Sensor ABS Axle 1 Left',\n",
-       "       'Low Current Pressure Modulation Valve ABS Axle 1 Right',\n",
-       "       'Low Current Pressure Modulation Valve ABS Axle 2 Right',\n",
-       "       'Low Current Dif 1 - ASR Valve',\n",
-       "       'Low Current Wheel Sensor ABS Axle 2 Left',\n",
-       "       'Not Reporting Data Wheel Sensor ABS Axle 2 Right',\n",
-       "       'Low Voltage (Electronic Pressure Control Trailer Control)',\n",
-       "       'Low Current Power Supply (obsolete)',\n",
-       "       'Incorrect Data Electronic Pressure Control Trailer Control',\n",
-       "       'Incorrect Data Lateral Acceleration',\n",
-       "       'Out of Calibration Pressure Modulation Valve ABS Axle 3 Left',\n",
-       "       'Special Instructions ASR Off-road Switch',\n",
-       "       'Low Current Wheel Sensor ABS Axle 1 Left',\n",
-       "       'Not Reporting Data Wheel Sensor ABS Axle 1 Left',\n",
-       "       'Low Current Electronic Pressure Control Trailer Control',\n",
-       "       'High Voltage (Dif 2 - ASR Valve)',\n",
-       "       'Low (Severity High) Wheel Sensor ABS Axle 3 Right',\n",
-       "       'Out of Calibration Lateral Acceleration',\n",
-       "       'Low Voltage (Pressure Modulation Valve ABS Axle 1 Left)',\n",
-       "       'Low Voltage (Pressure Modulation Valve ABS Axle 1 Right)',\n",
-       "       'Low Voltage (Dif 2 - ASR Valve)',\n",
-       "       'High Voltage (Pressure Modulation Valve ABS Axle 1 Left)',\n",
-       "       'Low Voltage (Battery Potential / Power Input 1)',\n",
-       "       'Low Voltage (Pressure Modulation Valve ABS Axle 2 Right)',\n",
-       "       'Low Current Trip Sudden Decelerations',\n",
-       "       'Incorrect Data Wheel Sensor ABS Axle 3 Right',\n",
-       "       'Low Voltage (Wheel Sensor ABS Axle 1 Left)',\n",
-       "       'Special Instructions Mode Switch ASR',\n",
-       "       'Abnormal Update Rate Wheel Sensor ABS Axle 1 Right',\n",
-       "       'Abnormal Update Rate Wheel Sensor ABS Axle 1 Left',\n",
-       "       'Abnormal Update Rate Wheel Sensor ABS Axle 2 Right',\n",
-       "       'Low Current Pressure Modulation Valve ABS Axle 2 Left',\n",
-       "       'Low Current Wheel Sensor ABS Axle 1 Right',\n",
-       "       'Low Voltage (Pressure Modulation Valve ABS Axle 2 Left)',\n",
-       "       'Error in System Brake Signal Sensor 1',\n",
-       "       'Abnormal Rate of Change Wheel Sensor ABS Axle 3 Left',\n",
-       "       'Out of Calibration Calibration Memory',\n",
-       "       'Low Current Dif 2 - ASR Valve',\n",
-       "       'Low Voltage (Wheel Sensor ABS Axle 2 Left)',\n",
-       "       'Low Voltage (Wheel Sensor ABS Axle 2 Right)',\n",
-       "       'Low (Severity High) Wheel Sensor ABS Axle 3 Left',\n",
-       "       'Abnormal Frequency Wheel Sensor ABS Axle 1 Left',\n",
-       "       'Not Reporting Data Wheel Sensor ABS Axle 3 Left',\n",
-       "       'High Voltage (Battery Potential / Power Input 1)',\n",
-       "       'Low Voltage (Brake System Hold Modulator Valve Solenoid Axle 1 Left)',\n",
-       "       'Low Current Brake System Hold Modulator Valve Solenoid Axle 1 Right',\n",
-       "       'Low Current Brake System Dump Modulator Valve Solenoid Axle 1 Left',\n",
-       "       'Low Voltage (Brake System Dump Modulator Valve Solenoid Axle 1 Left)',\n",
-       "       'Low Voltage (Brake System Hold Modulator Valve Solenoid Axle 1 Right)',\n",
-       "       'Low Current Brake System Dump Modulator Valve Solenoid Axle 1 Right',\n",
-       "       'High Voltage (Brake System Dump Modulator Valve Solenoid Axle 1 Right)',\n",
-       "       'Out of Calibration Wheel Sensor ABS Axle 3 Right',\n",
-       "       'Incorrect Data Controller #1',\n",
-       "       'Out of Calibration Wheel Sensor ABS Axle 3 Left',\n",
-       "       'Abnormal Update Rate Wheel Sensor ABS Axle 3 Left',\n",
-       "       'Abnormal Update Rate Wheel Sensor ABS Axle 2 Left',\n",
-       "       'Low Current Brake System Dump Modulator Valve Solenoid Axle 2 Right',\n",
-       "       'Out of Calibration Steering Wheel Angle',\n",
-       "       'Abnormal Update Rate Wheel Sensor ABS Axle 3 Right',\n",
-       "       'Incorrect Data Internal Sensor Voltage Supply',\n",
-       "       'Abnormal Rate of Change Wheel Sensor ABS Axle 3 Right',\n",
-       "       'Low Voltage (Pressure Modulation Valve ABS Axle 3 Left)',\n",
-       "       'Out of Calibration Wheel Sensor ABS Axle 3 Average',\n",
-       "       'High Voltage (Brake System Dump Modulator Valve Solenoid Axle 2 Left)',\n",
-       "       'Low Current Brake System Dump Modulator Valve Solenoid Axle 2 Left',\n",
-       "       'Low Current Brake System Hold Modulator Valve Solenoid Axle 3 Left',\n",
-       "       'Low Current Pressure Modulation Valve ABS Axle 3 Left',\n",
-       "       'Low Current Brake System Dump Modulator Valve Solenoid Axle 3 Left',\n",
-       "       'Low Current Pressure Modulation Valve ABS Axle 3 Right',\n",
-       "       'Low Current Brake System Hold Modulator Valve Solenoid Axle 2 Left',\n",
-       "       'Low Current Brake System Hold Modulator Valve Solenoid Axle 2 Right',\n",
-       "       'Low Voltage (Brake System Dump Modulator Valve Solenoid Axle 2 Right)',\n",
-       "       'Low Current Brake System Hold Modulator Valve Solenoid Axle 3 Right',\n",
-       "       'Low Voltage (Brake System Hold Modulator Valve Solenoid Axle 2 Left)',\n",
-       "       'Low Current Hillholder system', 'Low Voltage (Dif 1 - ASR Valve)',\n",
-       "       'High Voltage (Brake System Hold Modulator Valve Solenoid Axle 3 Right)',\n",
-       "       'Not Reporting Data Wheel Sensor ABS Axle 3 Right',\n",
-       "       'Low Current Brake System Dump Modulator Valve Solenoid Axle 3 Right',\n",
-       "       'Low Voltage (Brake System Dump Modulator Valve Solenoid Axle 1 Right)',\n",
-       "       'Low Voltage (Brake System Hold Modulator Valve Solenoid Axle 3 Right)',\n",
-       "       'High Voltage (Brake System Dump Modulator Valve Solenoid Axle 2 Right)',\n",
-       "       'High Voltage (Dif 1 - ASR Valve)'], dtype=object)"
+       "array([nan, 'Low Voltage (Sensor supply voltage 1)',\n",
+       "       'Low Current Aftertreatment 1 Particulate Trap Differential Pressure',\n",
+       "       'Low Current Aftertreatment 1 Exhaust Gas Temperature 3',\n",
+       "       'Low Current Aftertreatment 1 Exhaust Gas Temperature 1',\n",
+       "       'Low Current Aftertreatment 1 Exhaust Gas Temperature 2',\n",
+       "       'Abnormal Update Rate Source Address 23',\n",
+       "       'Low Voltage (ECU Power Output Supply Voltage #1)',\n",
+       "       'Abnormal Update Rate Source Address 0',\n",
+       "       'Abnormal Update Rate Catalyst Tank Controller',\n",
+       "       'Low Current Catalyst Tank Heater',\n",
+       "       'High Voltage (ECU Power Output Supply Voltage #1)',\n",
+       "       'High (Severity High) Catalyst Tank Temperature',\n",
+       "       'Incorrect Data J1939 Network #4',\n",
+       "       'Abnormal Update Rate Source Address 17',\n",
+       "       'Low Voltage (Catalyst Tank Heater)'], dtype=object)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ecu.loc[ecu['ecuSource']=='11']['eventDescription'].unique()"
+    "ecu.loc[ecu['ecuSource']=='61']['eventDescription'].unique()"
    ]
   },
   {
