still working on functions

--- a/notebooks/02_teresa_models.ipynb
+++ b/notebooks/02_teresa_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -951,12 +951,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trying the logreg model with the additional columns Rob said were important. Also corrected cost calculation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8296647323134017\n",
+      "MCC: 0.0018513983579927086\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       1.00      0.83      0.91    109435\n",
+      "        True       0.00      0.18      0.01       507\n",
+      "\n",
+      "    accuracy                           0.83    109942\n",
+      "   macro avg       0.50      0.51      0.46    109942\n",
+      "weighted avg       0.99      0.83      0.90    109942\n",
+      "\n",
+      "Confusion matrix: [[91125 18310]\n",
+      " [  417    90]]\n",
+      "Total cost: -9515000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# take AcceleratorPedal, FuelLtd, DistanceLtd, FuelRate, Speed out of model and try it with cost threshold\n",
+    "variables = ['BarometricPressure', 'CruiseControlSetSpeed', 'EngineCoolantTemperature', 'EngineLoad', 'EngineOilPressure', 'EngineOilTemperature', 'EngineRpm', 'EngineTimeLtd', \n",
+    "             'FuelLevel', 'IntakeManifoldTemperature', 'TurboBoostPressure', 'FuelTemperature', 'Throttle']\n",
+    "\n",
+    "X = fault_diag[variables]\n",
+    "y = fault_diag['derate_full']\n",
+    "\n",
+    "# train-test-validation split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify = y, random_state = 321, train_size = 0.8)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, stratify = y_train, random_state = 321, train_size = 0.6/0.8)\n",
+    "\n",
+    "# same model as before\n",
+    "# Impute missing values with the mean of each column\n",
+    "imputer = SimpleImputer(strategy = 'mean')\n",
+    "X_train_imputed = imputer.fit_transform(X_train)\n",
+    "X_test_imputed = imputer.transform(X_test)\n",
+    "X_val_imputed = imputer.transform(X_val)\n",
+    "\n",
+    "logreg = LogisticRegression(max_iter = 1000).fit(X_train_imputed, y_train)\n",
+    "\n",
+    "# predicted probabilities for test data\n",
+    "y_prob = logreg.predict_proba(X_val_imputed)[:, 1]\n",
+    "\n",
+    "# costs defined\n",
+    "cost_tp = 4000\n",
+    "cost_fp = 500\n",
+    "\n",
+    "# decision threshold with cost as a factor\n",
+    "# threshold = cost_fn / (cost_fn + cost_fp)\n",
+    "threshold = 0.005\n",
+    "\n",
+    "# probabilities converted to binary predictions based on new decision threshold\n",
+    "y_pred_adjusted = (y_prob >= threshold).astype(int)\n",
+    "\n",
+    "# evaluation of adjusted predictions\n",
+    "print(f'Accuracy: {accuracy_score(y_test, y_pred_adjusted)}')\n",
+    "print(f'MCC: {matthews_corrcoef(y_test, y_pred_adjusted)}')\n",
+    "print(classification_report(y_test, y_pred_adjusted, zero_division = 0.0))\n",
+    "\n",
+    "# confusion matrix\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred_adjusted)\n",
+    "print(f'Confusion matrix: {conf_matrix}')\n",
+    "\n",
+    "# cost calculation\n",
+    "total_cost = conf_matrix[1, 1] * cost_tp * -1 - conf_matrix[0, 1] * cost_fp # 2nd column\n",
+    "print(f'Total cost: {total_cost}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Confusion matrix is in terms of rows, but there are multiple rows leading up to a single derate. Makes cost savings calculation more complex.\n",
+    "\n",
+    "Want to actually predict the end event.\n",
+    "\n",
+    "In the case of false positives, same problem - multiple rows that say a derate is likely but it's the truck itself that should be flagged not each fault.\n",
+    "\n",
+    "Need to group by truck and day so we get a true picture of actual cost.\n",
+    "\n",
+    "Complication on false positives (although not really something we can do anything about): they might be cases where the driver paid attention and got service.\n",
+    "\n",
+    "A normal train-test split is dividing collections of rows that should go together. Working with more flexible model (eg gradient boosting) have potential to overfit the training data. Can result in some true positives because it's memorized the training data (events that happened very close in time). Think about doing train-test split based on time rather than at random (applies anytime there's a time component). Take first 80% based on time for training and last 20% for test. Could also chop by truck (so all records associated with a particular vehicle would be either in train or test but not both).\n",
+    "\n",
+    "Scikit-learn doesn't have a built-in way to split on time. Take derate into account - figure out where the 80% of derates happened (sorted by time) and split right after that time point. So it's not necessarily an 80-20 split just on time but makes sure that 20% of the events happen in the test set.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hist gradient boosting classifier - faster than random forrest"
+    "# hist gradient boosting classifier - faster than random forest, suggestion from Michael"
    ]
   }
  ],
