--- a/notebooks/03_time_split_models.ipynb
+++ b/notebooks/03_time_split_models.ipynb
@@ -915,6 +915,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining functions for determining optimal threshold and applying it to test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find optimal threshold\n",
+    "def find_optimal_threshold(y_val, y_proba):\n",
+    "    optimal_threshold = 0\n",
+    "    max_savings = 0\n",
+    "\n",
+    "    # test threshold values to find the best\n",
+    "    for threshold in np.arange(0, 1, 0.001):\n",
+    "\n",
+    "        y_pred = y_proba > threshold\n",
+    "\n",
+    "        # create confusion matrix\n",
+    "        conf_matrix = confusion_matrix(y_val, y_pred)\n",
+    "\n",
+    "        tp = conf_matrix[1, 1]\n",
+    "        fp = conf_matrix[0, 1]\n",
+    "        print(threshold, tp, fp) # for testing\n",
+    "\n",
+    "        # savings calculated\n",
+    "        savings = (4000 * tp) - (500 * fp)\n",
+    "        print(savings) # for testing\n",
+    "\n",
+    "        # check to see if it's best\n",
+    "        if savings > max_savings:\n",
+    "            max_savings = savings\n",
+    "            optimal_threshold = threshold\n",
+    "\n",
+    "        print(max_savings, optimal_threshold) # for testing\n",
+    "    \n",
+    "    return optimal_threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# apply optimal threshold to test data\n",
+    "def pred_with_optimal_threshold(y_test, y_proba, threshold):\n",
+    "    y_pred = y_proba > threshold\n",
+    "\n",
+    "    return y_pred"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -931,54 +988,74 @@
     "split_08 = derates.loc[ts_08, 'EventTimeStamp']\n",
     "split_06 = derates.loc[ts_06, 'EventTimeStamp']\n",
     "\n",
+    "# sets up split (still has all columns, could go ahead and select columns here next time)\n",
+    "train_set = fault_diag_sorted.loc[fault_diag_sorted['EventTimeStamp'] <= split_06]\n",
+    "val_set = fault_diag_sorted.loc[(fault_diag_sorted['EventTimeStamp'] > split_06) and (fault_diag_sorted['EventTimeStamp'] <= split_08)]\n",
+    "test_set = fault_diag_sorted.loc[(fault_diag_sorted['EventTimeStamp'] > split_08)]\n",
     "\n",
     "\n",
     "# take AcceleratorPedal, FuelLtd, DistanceLtd, FuelRate, Speed out of model and try it with cost threshold\n",
     "variables = ['BarometricPressure', 'CruiseControlSetSpeed', 'EngineCoolantTemperature', 'EngineLoad', 'EngineOilPressure', 'EngineOilTemperature', 'EngineRpm', 'EngineTimeLtd', \n",
     "             'FuelLevel', 'IntakeManifoldTemperature', 'TurboBoostPressure', 'FuelTemperature', 'Throttle']\n",
+    "target = 'derates_full'\n",
     "\n",
-    "X = fault_diag[variables]\n",
-    "y = fault_diag['derate_full']\n",
+    "# replaces train_test_split\n",
+    "X_train = train_set[[variables]].copy()\n",
+    "X_val = val_set[[variables]].copy()\n",
+    "X_test = test_set[[variables]].copy()\n",
     "\n",
-    "# train-test-validation split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify = y, random_state = 321, train_size = 0.8)\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, stratify = y_train, random_state = 321, train_size = 0.6/0.8)\n",
+    "y_train = train_set[target].copy()\n",
+    "y_val = val_set[target].copy()\n",
+    "y_test = test_set[target].copy()\n",
     "\n",
     "# same model as before\n",
     "# Impute missing values with the mean of each column\n",
     "imputer = SimpleImputer(strategy = 'mean')\n",
     "X_train_imputed = imputer.fit_transform(X_train)\n",
-    "X_test_imputed = imputer.transform(X_test)\n",
     "X_val_imputed = imputer.transform(X_val)\n",
+    "X_test_imputed = imputer.transform(X_test)\n",
     "\n",
     "logreg = LogisticRegression(max_iter = 1000).fit(X_train_imputed, y_train)\n",
     "\n",
-    "# predicted probabilities for test data\n",
-    "y_prob = logreg.predict_proba(X_val_imputed)[:, 1]\n",
+    "# # changing decision threshold\n",
+    "# y_val_pred_proba = logreg.predict_proba(X_val_imputed)[:,1]\n",
     "\n",
-    "# costs defined\n",
-    "cost_tp = 4000\n",
-    "cost_fp = 500\n",
+    "# candidate_thresholds = np.arange(start = 0.1, stop = 0.925, step = 0.01)\n",
+    "# thresholds = pd.DataFrame({'threshold': candidate_thresholds})\n",
+    "# thresholds['f1'] = thresholds['threshold'].apply(lambda x: f1_score(y_val, y_val_pred_proba > x))\n",
+    "# thresholds.sort_values('f1', ascending = False).head()\n",
     "\n",
-    "# decision threshold with cost as a factor\n",
-    "# threshold = cost_fn / (cost_fn + cost_fp)\n",
-    "threshold = 0.005\n",
     "\n",
-    "# probabilities converted to binary predictions based on new decision threshold\n",
-    "y_pred_adjusted = (y_prob >= threshold).astype(int)\n",
+    "# predicted probabilities for validation data\n",
+    "y_proba = logreg.predict_proba(X_val_imputed)[:, 1]\n",
     "\n",
-    "# evaluation of adjusted predictions\n",
-    "print(f'Accuracy: {accuracy_score(y_test, y_pred_adjusted)}')\n",
-    "print(f'MCC: {matthews_corrcoef(y_test, y_pred_adjusted)}')\n",
-    "print(classification_report(y_test, y_pred_adjusted, zero_division = 0.0))\n",
     "\n",
-    "# confusion matrix\n",
-    "conf_matrix = confusion_matrix(y_test, y_pred_adjusted)\n",
-    "print(f'Confusion matrix: {conf_matrix}')\n",
     "\n",
-    "# cost calculation\n",
-    "total_cost = conf_matrix[1, 1] * cost_tp - conf_matrix[0, 1] * cost_fp # 2nd column\n",
-    "print(f'Total cost: {total_cost}')"
+    "# replace below with function calls\n",
+    "\n",
+    "# # costs defined\n",
+    "# cost_tp = 4000\n",
+    "# cost_fp = 500\n",
+    "\n",
+    "# # decision threshold with cost as a factor\n",
+    "# # threshold = cost_fn / (cost_fn + cost_fp)\n",
+    "# threshold = 0.005\n",
+    "\n",
+    "# # probabilities converted to binary predictions based on new decision threshold\n",
+    "# y_pred_adjusted = (y_proba >= threshold).astype(int)\n",
+    "\n",
+    "# # evaluation of adjusted predictions\n",
+    "# print(f'Accuracy: {accuracy_score(y_test, y_pred_adjusted)}')\n",
+    "# print(f'MCC: {matthews_corrcoef(y_test, y_pred_adjusted)}')\n",
+    "# print(classification_report(y_test, y_pred_adjusted, zero_division = 0.0))\n",
+    "\n",
+    "# # confusion matrix\n",
+    "# conf_matrix = confusion_matrix(y_test, y_pred_adjusted)\n",
+    "# print(f'Confusion matrix: {conf_matrix}')\n",
+    "\n",
+    "# # cost calculation\n",
+    "# total_cost = conf_matrix[1, 1] * cost_tp - conf_matrix[0, 1] * cost_fp # 2nd column\n",
+    "# print(f'Total cost: {total_cost}')"
    ]
   },
   {
