--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -554,6 +554,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of dropping all service rows, keep the first one per vehicle on a particular day. New column to mark if the row represents service or fault (boolean). Can give time etc since last service."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 101,
    "metadata": {},
@@ -1417,46 +1424,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # replace with real operating parameters\n",
-    "# diag_cols = {'AcceleratorPedal' : [5, 10],\n",
-    "#                 'BarometricPressure' : [5, 10],\n",
-    "#                 'CruiseControlSetSpeed' : [5, 10],\n",
-    "#                 'DistanceLtd' : [5, 10],\n",
-    "#                 'EngineCoolantTemperature': [5, 10],\n",
-    "#                 'EngineLoad' : [5, 10],\n",
-    "#                 'EngineOilPressure' : [5, 10],\n",
-    "#                 'EngineOilTemperature': [5, 10],\n",
-    "#                 'EngineRpm': [5, 10],\n",
-    "#                 'EngineTimeLtd': [5, 10],\n",
-    "#                 'FuelLevel' : [5, 10],\n",
-    "#                 'FuelLtd' : [5, 10],\n",
-    "#                 'FuelRate' : [5, 10],\n",
-    "#                 'FuelTemperature' : [5, 10],\n",
-    "#                 'IntakeManifoldTemperature' : [5, 10],\n",
-    "#                 'LampStatus' : [5, 10],\n",
-    "#                 'Speed' : [5, 10],\n",
-    "#                 'Throttle' : [5, 10],\n",
-    "#                 'TurboBoostPressure' : [5, 10]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for col, bounds in diag_cols.items():\n",
-    "#     low_bound, high_bound = bounds\n",
-    "#     new_col = f'{col}_cat'\n",
-    "#     fault_diag[new_col] = pd.cut(fault_diag[col], bins = [-float('inf'), low_bound, high_bound, float('inf')], labels = ['low', 'normal', 'high'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
    "outputs": [
@@ -2071,6 +2038,57 @@
     "# fuel to gas ratio\n",
     "# (turboboost + barometric)  / fuel rate\n",
     "fault_diag['fuel_gas_ratio'] = (fault_diag['TurboBoostPressure'] + fault_diag['BarometricPressure']) / fault_diag['FuelRate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# engine oil temp - coolant temp (if diff greater than 25 could be a problem)\n",
+    "fault_diag['oil_cool_temp_diff'] = fault_diag['EngineOilTemperature'] - fault_diag['EngineCoolantTemperature']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # replace with real operating parameters\n",
+    "diag_cols = {'AcceleratorPedal' : [5, 10],\n",
+    "                'BarometricPressure' : [5, 10],\n",
+    "                'CruiseControlSetSpeed' : [5, 10],\n",
+    "                'DistanceLtd' : [5, 10],\n",
+    "                'EngineCoolantTemperature': [5, 10],\n",
+    "                'EngineLoad' : [5, 10],\n",
+    "                'EngineOilPressure' : [5, 10],\n",
+    "                'EngineOilTemperature': [5, 10],\n",
+    "                'EngineRpm': [5, 10],\n",
+    "                'EngineTimeLtd': [5, 10],\n",
+    "                'FuelLevel' : [5, 10],\n",
+    "                'FuelLtd' : [5, 10],\n",
+    "                'FuelRate' : [5, 10],\n",
+    "                'FuelTemperature' : [5, 10],\n",
+    "                'IntakeManifoldTemperature' : [5, 10],\n",
+    "                'LampStatus' : [5, 10],\n",
+    "                'Speed' : [5, 10],\n",
+    "                'Throttle' : [5, 10],\n",
+    "                'TurboBoostPressure' : [5, 10],\n",
+    "                'oil_cool_temp_diff' : [0, 25]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for col, bounds in diag_cols.items():\n",
+    "#     low_bound, high_bound = bounds\n",
+    "#     new_col = f'{col}_cat'\n",
+    "#     fault_diag[new_col] = pd.cut(fault_diag[col], bins = [-float('inf'), low_bound, high_bound, float('inf')], labels = ['low', 'normal', 'high'])"
    ]
   },
   {
