model support functions working

--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -2031,13 +2031,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "# fuel to gas ratio\n",
     "# (turboboost + barometric)  / fuel rate\n",
-    "fault_diag['fuel_gas_ratio'] = (fault_diag['TurboBoostPressure'] + fault_diag['BarometricPressure']) / fault_diag['FuelRate']"
+    "fault_diag['fuel_gas_ratio'] = fault_diag['FuelRate'] / (fault_diag['TurboBoostPressure'] + fault_diag['BarometricPressure'])"
    ]
   },
   {
@@ -2093,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
