terrible hist gradient boost model

--- a/notebooks/03_time_split_models.ipynb
+++ b/notebooks/03_time_split_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, matthews_corrcoef, f1_score, fbeta_score\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.ensemble import HistGradientBoostingClassifier"
    ]
   },
   {
@@ -1103,28 +1104,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 102,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(83837,)"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "y_test.shape"
+    "Trying hist gradient boosting classifier - suggestion from Michael\n",
+    "- tree-based classifier\n",
+    "- native support for missing values so try dropping the imputation I've been using"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Accuracy score: 0.006631916695492444\n",
+      "Matthews corr coef: 0.0\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.00      0.00      0.00     83281\n",
+      "        True       0.01      1.00      0.01       556\n",
+      "\n",
+      "    accuracy                           0.01     83837\n",
+      "   macro avg       0.00      0.50      0.01     83837\n",
+      "weighted avg       0.00      0.01      0.00     83837\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[    0 83281]\n",
+      " [    0   556]]\n",
+      "Model savings: -39416500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# repeated from previous model - set up custom-defined split based on derate events\n",
+    "# to find the time at which the 80% event happens, use loc to get just derate rows\n",
+    "derates = fault_diag_sorted.loc[(fault_diag_sorted['spn'] == 5246)].reset_index(drop = True)\n",
+    "# len * .8 to find how many events to include in train\n",
+    "ts_08 = int(len(derates) * 0.8)\n",
+    "ts_06 = int(len(derates) * 0.6)\n",
+    "# get timestamp corresponding to that row number, everything at or before is train\n",
+    "split_08 = derates.loc[ts_08, 'EventTimeStamp']\n",
+    "split_06 = derates.loc[ts_06, 'EventTimeStamp']\n",
+    "\n",
+    "# sets up split (still has all columns, could go ahead and select columns here next time)\n",
+    "train_set = fault_diag_sorted.loc[fault_diag_sorted['EventTimeStamp'] <= split_06]\n",
+    "val_set = fault_diag_sorted.loc[(fault_diag_sorted['EventTimeStamp'] > split_06) & (fault_diag_sorted['EventTimeStamp'] <= split_08)]\n",
+    "test_set = fault_diag_sorted.loc[(fault_diag_sorted['EventTimeStamp'] > split_08)]\n",
+    "\n",
+    "\n",
+    "# take AcceleratorPedal, FuelLtd, DistanceLtd, FuelRate, Speed out of model and try it with cost threshold\n",
+    "variables = ['BarometricPressure', 'CruiseControlSetSpeed', 'EngineCoolantTemperature', 'EngineLoad', 'EngineOilPressure', 'EngineOilTemperature', 'EngineRpm', 'EngineTimeLtd', \n",
+    "             'FuelLevel', 'IntakeManifoldTemperature', 'TurboBoostPressure', 'FuelTemperature', 'Throttle']\n",
+    "target = 'derate_full'\n",
+    "\n",
+    "# replaces train_test_split\n",
+    "X_train = train_set[variables].copy()\n",
+    "X_val = val_set[variables].copy()\n",
+    "X_test = test_set[variables].copy()\n",
+    "\n",
+    "y_train = train_set[target].copy()\n",
+    "y_val = val_set[target].copy()\n",
+    "y_test = test_set[target].copy()\n",
+    "\n",
+    "hgbm = HistGradientBoostingClassifier().fit(X_train, y_train)\n",
+    "\n",
+    "# predicted probabilities for validation data\n",
+    "y_proba_val = hgbm.predict_proba(X_val)[:, 1]\n",
+    "\n",
+    "optimal_threshold = find_optimal_threshold(y_val, y_proba_val)\n",
+    "print(optimal_threshold)\n",
+    "\n",
+    "# not sure this is actually how I should do this, but using the y_proba from the validation set was failing because there are different numbers of rows\n",
+    "y_proba_test = hgbm.predict_proba(X_test)[:, 1]\n",
+    "y_pred_test = pred_with_optimal_threshold(y_test, y_proba_test, optimal_threshold)\n",
+    "\n",
+    "metrics = calculate_metrics(y_test, y_pred_test)\n",
+    "print_metrics(metrics)\n",
+    "\n",
+    "# this identified everything as true, definitely need to do better"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
