--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -2093,7 +2093,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ID column to group rows by date and equipment id so they can easily be evauated as a unit\n",
+    "fault_diag['equip_date_id'] = fault_diag['EquipmentID'].astype(str) + '_' + fault_diag['event_date'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
