diff column for oil coolant temp

--- a/notebooks/teresa_eda.ipynb
+++ b/notebooks/teresa_eda.ipynb
@@ -2078,43 +2078,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # replace with real operating parameters\n",
-    "diag_cols = {'AcceleratorPedal' : [5, 10],\n",
-    "                'BarometricPressure' : [5, 10],\n",
-    "                'CruiseControlSetSpeed' : [5, 10],\n",
-    "                'DistanceLtd' : [5, 10],\n",
-    "                'EngineCoolantTemperature': [5, 10],\n",
-    "                'EngineLoad' : [5, 10],\n",
-    "                'EngineOilPressure' : [5, 10],\n",
-    "                'EngineOilTemperature': [5, 10],\n",
-    "                'EngineRpm': [5, 10],\n",
-    "                'EngineTimeLtd': [5, 10],\n",
-    "                'FuelLevel' : [5, 10],\n",
-    "                'FuelLtd' : [5, 10],\n",
-    "                'FuelRate' : [5, 10],\n",
-    "                'FuelTemperature' : [5, 10],\n",
-    "                'IntakeManifoldTemperature' : [5, 10],\n",
-    "                'LampStatus' : [5, 10],\n",
-    "                'Speed' : [5, 10],\n",
-    "                'Throttle' : [5, 10],\n",
-    "                'TurboBoostPressure' : [5, 10],\n",
-    "                'oil_cool_temp_diff' : [0, 25]}"
+    "diag_cols = {\n",
+    "    # 'AcceleratorPedal' : [5, 10],\n",
+    "    # 'BarometricPressure' : [5, 10],\n",
+    "    # 'CruiseControlSetSpeed' : [5, 10],\n",
+    "    # 'DistanceLtd' : [5, 10],\n",
+    "    # 'EngineCoolantTemperature': [5, 10],\n",
+    "    # 'EngineLoad' : [5, 10],\n",
+    "    # 'EngineOilPressure' : [5, 10],\n",
+    "    # 'EngineOilTemperature': [5, 10],\n",
+    "    # 'EngineRpm': [5, 10],\n",
+    "    # 'EngineTimeLtd': [5, 10],\n",
+    "    # 'FuelLevel' : [5, 10],\n",
+    "    # 'FuelLtd' : [5, 10],\n",
+    "    # 'FuelRate' : [5, 10],\n",
+    "    # 'FuelTemperature' : [5, 10],\n",
+    "    # 'IntakeManifoldTemperature' : [5, 10],\n",
+    "    # 'LampStatus' : [5, 10],\n",
+    "    # 'Speed' : [5, 10],\n",
+    "    # 'Throttle' : [5, 10],\n",
+    "    # 'TurboBoostPressure' : [5, 10],\n",
+    "    'oil_cool_temp_diff' : [0, 25]\n",
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for col, bounds in diag_cols.items():\n",
-    "#     low_bound, high_bound = bounds\n",
-    "#     new_col = f'{col}_cat'\n",
-    "#     fault_diag[new_col] = pd.cut(fault_diag[col], bins = [-float('inf'), low_bound, high_bound, float('inf')], labels = ['low', 'normal', 'high'])"
+    "for col, bounds in diag_cols.items():\n",
+    "    low_bound, high_bound = bounds\n",
+    "    new_col = f'{col}_cat'\n",
+    "    fault_diag[new_col] = pd.cut(fault_diag[col], bins = [-float('inf'), low_bound, high_bound, float('inf')], labels = ['low', 'normal', 'high'])"
    ]
   },
   {
@@ -2129,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
